--- a/about.html
+++ b/about.html
@@ -93,14 +93,33 @@
 </p>
                 <p> Currently only one drug (Riluzole) is approved for the treatment of ALS. It extends patient’s lifespan for a maximum of 3 months. Despite this, there are several promising clinical trials and tools that can improve patient's quality of life.
 </p>
-                <strong><p>Familial ALS</p></strong>
+                <strong><p>Familial ALS (fALS)</p></strong>
 
-                <p></p>
+                <p>Mutations in several genes have been found to cause fALS (C9ORF72 is responsible for 30-40% of fALS in the USA, SOD1 cause about 20% of fALS, TARDBP cause 5%, FUS cause 5% and ANG mutations cause 1%). It is estimated that 60% of individuals with fALS have an identified genetic mutation; the cause for the rest remains unknown.
+</p>
+                <strong><p>Sporadic ALS (sALS)</p></strong>
+                <p>The cause of sporadic ALS is largely unknown, but familial and epidemiological data suggest that genetic and environmental factors contribute to its pathogenesis. No single gene has been associated with increased risk for ALS.</p>
+                <strong><p>RNA in ALS</p></strong>
+                <p>Understanding the role of RNA in ALS is a relatively new research topic, with one of the first relevant discoveries being TDP43 aggregates in ALS in 2007.This subfield has grown substantially, especially in the past 3 years.</p>
+                <p>Abnormal oxidation of mRNA has been reported in patients with ALS and SOD1 transgenic mice starting with in the pre-symptomatic stage. It has been hypothesized that blocking RNA oxidation at the prodromal stage may prevent/slow the disease progression. However, once symptoms of the disease are already evident, the antioxidant treatment may be already too late, thus no significant beneficial effect was observed.</p>
+                <p>Under normal conditions, TDP-43 proteins locate in the nucleus and are degraded through the proteasome pathway. However, in ALS, aberrant modifications and cleavage of TDP-43 generate abnormal 25 kDa fragments. Because the 25 kDa fragments lack the nuclear localization signal, they aggregate in the cytoplasm.</p>
+                <p>The RNA-binding ability of FUS is critical in driving cellular toxicity and mutating the RNA-binding residues of FUS has been shown to be enough to abolish this process.</p>
+                <p>Cytoplasmic mislocalization of mutant FUS is dependent on its RNA-binding ability, and cytoplasmic localization of mutant FUS is a critical step in ALS pathogenesis. Wild-type (RNA binding-incompetent) FUS does not incorporate into the cytoplasmic stress granules but FUS carrying ALS mutations does under stress conditions.</p>
+                <strong><p>Some associations researching ALS</strong></p>
+                <p>This list is not complete. If you know of any associations I did not mention, please contact me and I'll add them</p>
+                <ul>
+                  <li> ALS association (<a href="www.alsa.org">alsa.org</a>)</li>
+                  <li> Project ALS (<a href = "www.projectals.org">projectals.org</a>)</li>
+                  <li> ALS TDI (<a href = "www.als.net">als.net</a>)</li>
+                  <li> Team Gleason (<a href = "www.teamgleason.org">teamgleason.org </a>)</li>
+                  <li> SciOpen Research Group (<a href = "www.sciopen.org">sciopen.org</a>)</li>
+                  <li> Project MinE (<a href = "www.projectmine.com/"> projectmine.com </a>)</li>
+                </ul>
                 <hr>
 
-                <!-- Blog Comments -->
 
-                
+
+
 
 <!-- jQuery Version 1.11.0 -->
 <script src="js/jquery-1.11.0.js"></script>
