--- a/contact.html
+++ b/contact.html
@@ -25,6 +25,7 @@
 </head>
 
 <body>
+<?php include 'form.php';?>
 
   <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
       <div class="container">
