--- a/neuron1408.html
+++ b/neuron1408.html
@@ -213,56 +213,58 @@
    </div>
 
     <!-- Blog Categories Well -->
-    <div class="well">
-        <h4>Blog Categories</h4>
-        <div class="row">
-            <div class="col-lg-6">
-                <ul class="list-unstyled">
-                    <li><a href="#">Newest Research</a>
-                    </li>
-                    <li><a href="#">Pipeline</a>
-                    </li>
-                    <li><a href="#">Major Papers</a>
-                    </li>
-                </ul>
-            </div>
-            <!-- /.col-lg-6
-            <div class="col-lg-6">
-                <ul class="list-unstyled">
-                    <li><a href="#">Category Name</a>
-                    </li>
-                    <li><a href="#">Category Name</a>
-                    </li>
-                    <li><a href="#">Category Name</a>
-                    </li>
-                    <li><a href="#">Category Name</a>
-                    </li>
-                </ul>
-            </div>
-             /.col-lg-6 -->
-        </div>
-        <!-- /.row -->
-    </div>
+                    <!-- Blog Categories Well -->
+                <div class="well">
+                    <h4>Blog Categories</h4>
+                    <div class="row">
+                        <div class="col-lg-6">
+                            <ul class="list-unstyled">
+                                <li><a href="newest.html">Newest Research</a>
+                                </li>
+                                <li><a href="pipeline.html">Pipeline</a>
+                                </li>
+                                <li><a href="major.html">Major Papers</a>
+                                </li>
+                            </ul>
+                        </div>
+                        <!-- /.col-lg-6
+                        <div class="col-lg-6">
+                            <ul class="list-unstyled">
+                                <li><a href="#">Category Name</a>
+                                </li>
+                                <li><a href="#">Category Name</a>
+                                </li>
+                                <li><a href="#">Category Name</a>
+                                </li>
+                                <li><a href="#">Category Name</a>
+                                </li>
+                            </ul>
+                        </div>
+                         /.col-lg-6 -->
+                    </div>
+                    <!-- /.row -->
+                </div>
 
-    <div class="panel panel-default">
-      <div class="panel-heading">
-        <h4>Tags</h4>
-      </div>
-      <div class="panel-body">
-        <ul class="list-inline">
-          <li><a href="#">C9ORF72</a></li>
-          <li><a href="#">Small Molecules</a></li>
-          <li><a href="#">Biomarkers</a></li>
-          <!--<li><a href="#"></a></li>
-          <li><a href="#"></a></li>
-          <li><a href="#"></a></li>
-          <li><a href="#"></a></li>
-          <li><a href="#"></a></li>
-          <li><a href="#"></a></li>
-          <li><a href="#"></a></li>-->
-</ul>
+                <div class="panel panel-default">
+                  <div class="panel-heading">
+                    <h4>Tags</h4>
+                  </div>
+                  <div class="panel-body">
+                    <ul class="list-inline">
+                      <li><a href="c9orf72.html">C9ORF72</a></li>
+                      <li><a href="smallMolecules.html">Small Molecules</a></li>
+                      <li><a href="biomarkers.html">Biomarkers</a></li>
+                      <!--<li><a href="#"></a></li>
+                      <li><a href="#"></a></li>
+                      <li><a href="#"></a></li>
+                      <li><a href="#"></a></li>
+                      <li><a href="#"></a></li>
+                      <li><a href="#"></a></li>
+                      <li><a href="#"></a></li>-->
+        </ul>
+    </div>
 </div>
-</div>
+
 
 
     <!-- Side Widget Well -->
