--- a/neuron1408.html
+++ b/neuron1408.html
@@ -114,157 +114,116 @@
                 <!-- Blog Comments -->
 
                 <!-- Comments Form -->
-                <div class="well">
-                    <h4>Leave a Comment:</h4>
-                    <form role="form">
-                        <div class="form-group">
-                            <textarea class="form-control" rows="3"></textarea>
-                        </div>
-                        <button type="submit" class="btn btn-danger">Submit</button>
-                    </form>
-                </div>
+                <div id="disqus_thread"></div>
+                <script type="text/javascript">
+                    /* * * CONFIGURATION VARIABLES: EDIT BEFORE PASTING INTO YOUR WEBPAGE * * */
+                    var disqus_shortname = 'alsnews'; // required: replace example with your forum shortname
 
-                <hr>
-
-                <!-- Posted Comments -->
-
-                <!-- Comment -->
-                <div class="media">
-                    <a class="pull-left" href="#">
-                        <img class="media-object" src="http://placehold.it/64x64" alt="">
-                    </a>
-                    <div class="media-body">
-                        <h4 class="media-heading">Start Bootstrap
-                            <small>August 25, 2014 at 9:30 PM</small>
-                        </h4>
-                        Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin commodo. Cras purus odio, vestibulum in vulputate at, tempus viverra turpis. Fusce condimentum nunc ac nisi vulputate fringilla. Donec lacinia congue felis in faucibus.
-                    </div>
-                </div>
-
-                <!-- Comment -->
-                <div class="media">
-                    <a class="pull-left" href="#">
-                        <img class="media-object" src="http://placehold.it/64x64" alt="">
-                    </a>
-                    <div class="media-body">
-                        <h4 class="media-heading">Start Bootstrap
-                            <small>August 25, 2014 at 9:30 PM</small>
-                        </h4>
-                        Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin commodo. Cras purus odio, vestibulum in vulputate at, tempus viverra turpis. Fusce condimentum nunc ac nisi vulputate fringilla. Donec lacinia congue felis in faucibus.
-                        <!-- Nested Comment -->
-                        <div class="media">
-                            <a class="pull-left" href="#">
-                                <img class="media-object" src="http://placehold.it/64x64" alt="">
-                            </a>
-                            <div class="media-body">
-                                <h4 class="media-heading">Nested Start Bootstrap
-                                    <small>August 25, 2014 at 9:30 PM</small>
-                                </h4>
-                                Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin commodo. Cras purus odio, vestibulum in vulputate at, tempus viverra turpis. Fusce condimentum nunc ac nisi vulputate fringilla. Donec lacinia congue felis in faucibus.
-                            </div>
-                        </div>
-                        <!-- End Nested Comment -->
-                    </div>
-                </div>
-
-            </div>
+                    /* * * DON'T EDIT BELOW THIS LINE * * */
+                    (function() {
+                        var dsq = document.createElement('script'); dsq.type = 'text/javascript'; dsq.async = true;
+                        dsq.src = '//' + disqus_shortname + '.disqus.com/embed.js';
+                        (document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(dsq);
+                    })();
+                </script>
+                <noscript>Please enable JavaScript to view the <a href="http://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
+                <a href="http://disqus.com" class="dsq-brlink">comments powered by <span class="logo-disqus">Disqus</span></a>
+              </div>
 
             <!-- Blog Sidebar Widgets Column -->
             <div class="col-md-4">
 
-   <div class="well text-center">
-     <p class="lead">
-       Don't want to miss updates? Please click the below button!
-     </p>
-     <button class="btn btn-danger btn-lg">Subscribe to my feed</button>
-   </div>
+             <div class="well text-center">
+               <p class="lead">
+                 Don't want to miss updates? Please click the below button!
+               </p>
+               <button class="btn btn-danger btn-lg">Subscribe to my feed</button>
+             </div>
 
-   <div class="well">
-       <h4>Blog Search</h4>
-       <div class="input-group">
-         <script>
-         (function() {
-           var cx = '011906290031035704904:-o-3j3gb-bi';
-           var gcse = document.createElement('script');
-           gcse.type = 'text/javascript';
-           gcse.async = true;
-           gcse.src = (document.location.protocol == 'https:' ? 'https:' : 'http:') +
-               '//www.google.com/cse/cse.js?cx=' + cx;
-           var s = document.getElementsByTagName('script')[0];
-           s.parentNode.insertBefore(gcse, s);
-         })();
-       </script>
-       <gcse:search></gcse:search>
-       </div>
-       <!-- /.input-group -->
-   </div>
+             <div class="well">
+                 <h4>Blog Search</h4>
+                 <div class="input-group">
+                   <script>
+                   (function() {
+                     var cx = '011906290031035704904:-o-3j3gb-bi';
+                     var gcse = document.createElement('script');
+                     gcse.type = 'text/javascript';
+                     gcse.async = true;
+                     gcse.src = (document.location.protocol == 'https:' ? 'https:' : 'http:') +
+                         '//www.google.com/cse/cse.js?cx=' + cx;
+                     var s = document.getElementsByTagName('script')[0];
+                     s.parentNode.insertBefore(gcse, s);
+                   })();
+                 </script>
+                 <gcse:search></gcse:search>
+                 </div>
+                 <!-- /.input-group -->
+             </div>
 
-   <div class="panel panel-default">
-     <div class="panel-heading">
-       <h4>Latest Posts</h4>
-     </div>
-     <ul class="list-group">
-       <li class="list-group-item"><a href="neuron1408.html">1. Identification of an ALS biomarker and a small molecule binding the GGGGCC repeat expansion</a></li>
-       <!--<li class="list-group-item"><a href="singlepost.html">2. </a></li>
-       <li class="list-group-item"><a href="singlepost.html">3. </a></li>
-       <li class="list-group-item"><a href="singlepost.html">4. </a></li>
-       <li class="list-group-item"><a href="singlepost.html">5. </a></li>-->
-     </ul>
-   </div>
+             <div class="panel panel-default">
+               <div class="panel-heading">
+                 <h4>Latest Posts</h4>
+               </div>
+               <ul class="list-group">
+                 <li class="list-group-item"><a href="singlepost.html">1. Identification of an ALS biomarker and a small molecule binding the GGGGCC repeat expansion</a></li>
+                 <!--<li class="list-group-item"><a href="singlepost.html">2. </a></li>
+                 <li class="list-group-item"><a href="singlepost.html">3. </a></li>
+                 <li class="list-group-item"><a href="singlepost.html">4. </a></li>
+                 <li class="list-group-item"><a href="singlepost.html">5. </a></li>-->
+               </ul>
+             </div>
 
-    <!-- Blog Categories Well -->
-                    <!-- Blog Categories Well -->
-                <div class="well">
-                    <h4>Blog Categories</h4>
-                    <div class="row">
-                        <div class="col-lg-6">
-                            <ul class="list-unstyled">
-                                <li><a href="newest.html">Newest Research</a>
-                                </li>
-                                <li><a href="pipeline.html">Pipeline</a>
-                                </li>
-                                <li><a href="major.html">Major Papers</a>
-                                </li>
-                            </ul>
-                        </div>
-                        <!-- /.col-lg-6
-                        <div class="col-lg-6">
-                            <ul class="list-unstyled">
-                                <li><a href="#">Category Name</a>
-                                </li>
-                                <li><a href="#">Category Name</a>
-                                </li>
-                                <li><a href="#">Category Name</a>
-                                </li>
-                                <li><a href="#">Category Name</a>
-                                </li>
-                            </ul>
-                        </div>
-                         /.col-lg-6 -->
-                    </div>
-                    <!-- /.row -->
-                </div>
-
-                <div class="panel panel-default">
-                  <div class="panel-heading">
-                    <h4>Tags</h4>
+              <!-- Blog Categories Well -->
+              <div class="well">
+                  <h4>Blog Categories</h4>
+                  <div class="row">
+                      <div class="col-lg-6">
+                          <ul class="list-unstyled">
+                              <li><a href="#">Newest Research</a>
+                              </li>
+                              <li><a href="#">Pipeline</a>
+                              </li>
+                              <li><a href="#">Major Papers</a>
+                              </li>
+                          </ul>
+                      </div>
+                      <!-- /.col-lg-6
+                      <div class="col-lg-6">
+                          <ul class="list-unstyled">
+                              <li><a href="#">Category Name</a>
+                              </li>
+                              <li><a href="#">Category Name</a>
+                              </li>
+                              <li><a href="#">Category Name</a>
+                              </li>
+                              <li><a href="#">Category Name</a>
+                              </li>
+                          </ul>
+                      </div>
+                       /.col-lg-6 -->
                   </div>
-                  <div class="panel-body">
-                    <ul class="list-inline">
-                      <li><a href="c9orf72.html">C9ORF72</a></li>
-                      <li><a href="smallMolecules.html">Small Molecules</a></li>
-                      <li><a href="biomarkers.html">Biomarkers</a></li>
-                      <!--<li><a href="#"></a></li>
-                      <li><a href="#"></a></li>
-                      <li><a href="#"></a></li>
-                      <li><a href="#"></a></li>
-                      <li><a href="#"></a></li>
-                      <li><a href="#"></a></li>
-                      <li><a href="#"></a></li>-->
-        </ul>
-    </div>
-</div>
+                  <!-- /.row -->
+              </div>
 
+              <div class="panel panel-default">
+                <div class="panel-heading">
+                  <h4>Tags</h4>
+                </div>
+                <div class="panel-body">
+                  <ul class="list-inline">
+                    <li><a href="#">C9ORF72</a></li>
+                    <li><a href="#">Small Molecules</a></li>
+                    <li><a href="#">Biomarkers</a></li>
+                    <!--<li><a href="#"></a></li>
+                    <li><a href="#"></a></li>
+                    <li><a href="#"></a></li>
+                    <li><a href="#"></a></li>
+                    <li><a href="#"></a></li>
+                    <li><a href="#"></a></li>
+                    <li><a href="#"></a></li>-->
+          </ul>
+          </div>
+          </div>
 
 
     <!-- Side Widget Well -->
@@ -295,6 +254,19 @@
 
 <!-- Bootstrap Core JavaScript -->
 <script src="js/bootstrap.min.js"></script>
+
+   <script type="text/javascript">
+    /* * * CONFIGURATION VARIABLES: EDIT BEFORE PASTING INTO YOUR WEBPAGE * * */
+    var disqus_shortname = 'alsnews'; // required: replace example with your forum shortname
+
+    /* * * DON'T EDIT BELOW THIS LINE * * */
+    (function () {
+        var s = document.createElement('script'); s.async = true;
+        s.type = 'text/javascript';
+        s.src = '//' + disqus_shortname + '.disqus.com/count.js';
+        (document.getElementsByTagName('HEAD')[0] || document.getElementsByTagName('BODY')[0]).appendChild(s);
+    }());
+    </script>
 
 </body>
 
