--- a/contact.html
+++ b/contact.html
@@ -25,7 +25,6 @@
 </head>
 
 <body>
-<?php include 'form.php';?>
 
   <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
       <div class="container">
@@ -66,8 +65,8 @@
         </p>
     </div>
 
-    <div class="contact-form">
-    <form method="post" action="form.php" class="form-horizontal col-md-8" role="form">
+        <div class="contact-form">
+    <form id="callus" target="_self" onsubmit="" action="javascript: postContactToGoogle()" class="form-horizontal col-md-8" role="form">
 
         <div class="form-group">
             <label for="name" class="col-md-2">Name</label>
@@ -84,28 +83,54 @@
         </div>
 
         <div class="form-group">
-            <label for="subject" class="col-md-2">Subject</label>
-            <div class="col-md-10">
-                <input name="subject" type="subject" class="form-control" id="subject" placeholder="Subject">
-            </div>
-        </div>
-
-        <div class="form-group">
             <label for="message" class="col-md-2">Message</label>
             <div class="col-md-10">
                 <textarea name = "message" class="form-control" id="message" placeholder="Message"></textarea>
             </div>
         </div>
 
-        <label>*What is 2+2? (Anti-spam)</label>
-        <input name="human" placeholder="Type Here">
-
         <div class="form-group">
             <div class="col-md-12 text-right">
                 <button type="submit" class="btn btn-lg btn-danger">Submit your message!</button>
             </div>
         </div>
-    </form>
+        <script type = "text/javascript">
+          function validateEmail(email) {
+            var re = /^(([^<>()[\]\\.,;:\s@\ "]+(\.[^<>()[\]\\.,;:\s@\ "]+)*)|(\ ".+\ "))@((\[[0-9]{1,3}\.[0-9]{1,3}\.[0-9]{1,3}\.[0-9]{1,3}\])|(([a-zA-Z\-0-9]+\.)+[a-zA-Z]{2,}))$/;
+        return re.test(email);
+    }
+    function postContactToGoogle(){
+        var name = $j('#name').val();
+        var email = $j('#email').val();
+        var message = $j('#message').val();
+        if ((name !== "") && (email !== "") && ((feed !== "") && (validateEmail(email)))) {
+            $j.ajax({
+                url: "https://docs.google.com/a/mariachavez.co/forms/d/185wbC-3gJU4_HxUpoO4UAKJx_NiFMmeDzh84HnkJRxc/formResponse",
+                data: {"entry.1" : name, "entry.3" : email, "entry.4": feed},
+                type: "POST",
+                dataType: "xml",
+                statusCode: {
+                    0: function (){
+
+                        $j('#name').val("");
+                        $j('#email').val("");
+                        $j('#message').val("");
+                        //Success message
+                    },
+                    200: function (){
+                        $j('#name').val("");
+                        $j('#email').val("");
+                        $j('#message').val("");
+                        //Success Message
+                    }
+                }
+            });
+        }
+        else {
+            //Error message
+        }
+    }
+</script>
 </div>
 
 </div>
