--- a/contact.html
+++ b/contact.html
@@ -66,7 +66,7 @@
     </div>
 
         <div class="contact-form">
-    <form id="callus" target="_self" onsubmit="" action="javascript: postContactToGoogle()" class="form-horizontal col-md-8" role="form">
+    <form class="form-horizontal col-md-8" role="form" action="mailto:me@mariachavez.co" method="get" enctype="text/plain">
 
         <div class="form-group">
             <label for="name" class="col-md-2">Name</label>
@@ -94,43 +94,7 @@
                 <button type="submit" class="btn btn-lg btn-danger">Submit your message!</button>
             </div>
         </div>
-        <script type = "text/javascript">
-          function validateEmail(email) {
-            var re = /^(([^<>()[\]\\.,;:\s@\ "]+(\.[^<>()[\]\\.,;:\s@\ "]+)*)|(\ ".+\ "))@((\[[0-9]{1,3}\.[0-9]{1,3}\.[0-9]{1,3}\.[0-9]{1,3}\])|(([a-zA-Z\-0-9]+\.)+[a-zA-Z]{2,}))$/;
-        return re.test(email);
-    }
-    function postContactToGoogle(){
-        var name = $j('#name').val();
-        var email = $j('#email').val();
-        var message = $j('#message').val();
-        if ((name !== "") && (email !== "") && ((feed !== "") && (validateEmail(email)))) {
-            $j.ajax({
-                url: "https://docs.google.com/a/mariachavez.co/forms/d/185wbC-3gJU4_HxUpoO4UAKJx_NiFMmeDzh84HnkJRxc/formResponse",
-                data: {"entry.1" : name, "entry.3" : email, "entry.4": feed},
-                type: "POST",
-                dataType: "xml",
-                statusCode: {
-                    0: function (){
-
-                        $j('#name').val("");
-                        $j('#email').val("");
-                        $j('#message').val("");
-                        //Success message
-                    },
-                    200: function (){
-                        $j('#name').val("");
-                        $j('#email').val("");
-                        $j('#message').val("");
-                        //Success Message
-                    }
-                }
-            });
-        }
-        else {
-            //Error message
-        }
-    }
-</script>
+        
 </div>
 
 </div>
