--- a/contact.html
+++ b/contact.html
@@ -61,7 +61,7 @@
     <h1>Contact Me</h1>
     <div class="well">
         <p class="lead">
-            Do you have any question? Want to write for us? Please use the below contact form and send a message. I'll reply you as quick as possible.
+            Do you have any question? Want to write for us? Please use the contact form below and send a message, or email me to me@mariachavez.co. I'll reply you as quick as possible.
         </p>
     </div>
 
