--- a/contact.html
+++ b/contact.html
@@ -61,11 +61,11 @@
     <h1>Contact Me</h1>
     <div class="well">
         <p class="lead">
-            Do you have any question? Want to write for us? Please use the contact form below and send a message, or email me to me@mariachavez.co. I'll reply you as quick as possible.
+            Do you have any question? Want to write for us? Share your story? Please email me to me@mariachavez.co. I'll reply you as quick as possible.
         </p>
     </div>
 
-        <div class="contact-form">
+        <!--<div class="contact-form">
     <form class="form-horizontal col-md-8" role="form" action="mailto:me@mariachavez.co" method="get" enctype="text/plain">
 
         <div class="form-group">
@@ -93,7 +93,7 @@
             <div class="col-md-12 text-right">
                 <button type="submit" class="btn btn-lg btn-danger">Submit your message!</button>
             </div>
-        </div>
+        </div>-->
         
 </div>
 
