--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
             <!-- Blog Sidebar Widgets Column -->
             <div class="col-md-4">
 
-               <div class="well text-center">
+               <!--<div class="well text-center">
                  <p class="lead">
                    Don't want to miss updates? Please click the below button!
                  </p>
@@ -161,8 +161,7 @@
                    </script>
                    <gcse:search></gcse:search>
                    </div>
-                   <!-- /.input-group -->
-               </div>
+               </div>-->
 
                <div class="panel panel-default">
                  <div class="panel-heading">
