--- a/contact.html
+++ b/contact.html
@@ -58,7 +58,7 @@
   </nav>
 
 <div class="container">
-    <h1>Contact Me</h1>
+    <h1>Contact Us</h1>
     <div class="well">
         <p class="lead">
             Do you have any question? Want to write for us? Share your story? Please email me to me@mariachavez.co. I'll reply you as quick as possible.
