--- a/contact.html
+++ b/contact.html
@@ -61,7 +61,7 @@
     <h1>Contact Us</h1>
     <div class="well">
         <p class="lead">
-            Do you have any question? Want to write for us? Share your story? Please email me to me@mariachavez.co. I'll reply you as quick as possible.
+            Do you have any question? Want to write for us? Share your story? Please email me at me@mariachavez.co. I'll reply as soon as I can.
         </p>
     </div>
 
