--- a/neuron1408.html
+++ b/neuron1408.html
@@ -152,11 +152,11 @@
                   <div class="row">
                       <div class="col-lg-6">
                           <ul class="list-unstyled">
-                              <li><a href="#">Newest Research</a>
+                              <li><a href="newest.html">Newest Research</a>
                               </li>
-                              <li><a href="#">Pipeline</a>
+                              <li><a href="pipeline.html">Pipeline</a>
                               </li>
-                              <li><a href="#">Major Papers</a>
+                              <li><a href="major.html">Major Papers</a>
                               </li>
                           </ul>
                       </div>
@@ -184,9 +184,9 @@
                 </div>
                 <div class="panel-body">
                   <ul class="list-inline">
-                    <li><a href="#">C9ORF72</a></li>
-                    <li><a href="#">Small Molecules</a></li>
-                    <li><a href="#">Biomarkers</a></li>
+                    <li><a href="c9orf72.html">C9ORF72</a></li>
+                    <li><a href="smallMolecules.html">Small Molecules</a></li>
+                    <li><a href="biomarker.html">Biomarkers</a></li>
                     <!--<li><a href="#"></a></li>
                     <li><a href="#"></a></li>
                     <li><a href="#"></a></li>
