--- a/index.html
+++ b/index.html
@@ -70,7 +70,20 @@
                     ALS news
                 </h1>
 
-                <!-- First Blog Post -->
+                <article>
+                <h2>
+                Unconventional Translation of C9orf72 GGGGCC expansion generates insoluble polypeptides
+
+                </h2>
+                <p class="lead"> by <a href="editorial.html">Maria Chavez</a>
+                </p>
+                <p><span class="glyphicon glyphicon-time"></span> Posted on August 26, 2014 at 6:00 PM</p>
+                <p>In a study published in early 2013, researchers from the Mayo Clinic found that C9RANT aggregates resulting from non-ATG (RAN) translation form in neurons containing the GGGGCC repeat expansion in C9orf72, which is the most common genetic cause of ALS and c9FTD. </p>
+                <a class="btn btn-danger" href="neuron2002.html" style="color: #FFFFFF">Read More <span class="glyphicon glyphicon-chevron-right"></span></a>
+                <hr>
+              </article>
+
+
                 <article>
                 <h2>
                 Identification of an ALS biomarker and a small molecule binding the GGGGCC repeat expansion
@@ -84,25 +97,6 @@
 
                 <hr>
               </article>
-
-                <!-- Second Blog Post
-
-                <article>
-                <h2>
-                    <a href="#">Blog Post Title</a>
-                </h2>
-                <p class="lead">
-                    by <a href="index.php">Start Bootstrap</a>
-                </p>
-                <p><span class="glyphicon glyphicon-time"></span> Posted on August 28, 2013 at 10:45 PM</p>
-                <hr>
-                <img class="img-responsive" src="http://placehold.it/900x300" alt="">
-                <hr>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quibusdam, quasi, fugiat, asperiores harum voluptatum tenetur a possimus nesciunt quod accusamus saepe tempora ipsam distinctio minima dolorum perferendis labore impedit voluptates!</p>
-                <a class="btn btn-danger" href="#">Read More <span class="glyphicon glyphicon-chevron-right"></span></a>
-
-                <hr>
-              </article>-->
 
                 <!-- Third Blog Post
                 <article>
