--- a/c9orf72.html
+++ b/c9orf72.html
@@ -69,6 +69,19 @@
                 <h1 class="page-header">
                     C9ORF72
                 </h1>
+                
+                <article>
+                <h2>
+                Unconventional Translation of C9orf72 GGGGCC expansion generates insoluble polypeptides
+
+                </h2>
+                <p class="lead"> by <a href="editorial.html">Maria Chavez</a>
+                </p>
+                <p><span class="glyphicon glyphicon-time"></span> Posted on August 26, 2014 at 6:00 PM</p>
+                <p>In a study published in early 2013, researchers from the Mayo Clinic found that C9RANT aggregates resulting from non-ATG (RAN) translation form in neurons containing the GGGGCC repeat expansion in C9orf72, which is the most common genetic cause of ALS and c9FTD. </p>
+                <a class="btn btn-danger" href="neuron2002.html" style="color: #FFFFFF">Read More <span class="glyphicon glyphicon-chevron-right"></span></a>
+                <hr>
+                </article>
 
                 <!-- First Blog Post -->
                 <article>
