--- a/neuron1408.html
+++ b/neuron1408.html
@@ -138,7 +138,8 @@
                  <h4>Latest Posts</h4>
                </div>
                <ul class="list-group">
-                 <li class="list-group-item"><a href="singlepost.html">1. Identification of an ALS biomarker and a small molecule binding the GGGGCC repeat expansion</a></li>
+                 <li class="list-group-item"><a href="neuron2002.html">1. Unconventional Translation of C9orf72 GGGGCC expansion generates insoluble polypeptides </a></li>
+                 <li class="list-group-item"><a href="singlepost.html">2. Identification of an ALS biomarker and a small molecule binding the GGGGCC repeat expansion</a></li>
                  <!--<li class="list-group-item"><a href="singlepost.html">2. </a></li>
                  <li class="list-group-item"><a href="singlepost.html">3. </a></li>
                  <li class="list-group-item"><a href="singlepost.html">4. </a></li>
