--- a/neuron2002.html
+++ b/neuron2002.html
@@ -126,7 +126,7 @@
                </div>
                <ul class="list-group">
                  <li class="list-group-item"><a href="neuron2002.html">1. Unconventional Translation of C9orf72 GGGGCC expansion generates insoluble polypeptides </a></li>
-                 <li class="list-group-item"><a href="singlepost.html">2. Identification of an ALS biomarker and a small molecule binding the GGGGCC repeat expansion</a></li>
+                 <li class="list-group-item"><a href="neuron1408.html">2. Identification of an ALS biomarker and a small molecule binding the GGGGCC repeat expansion</a></li>
                  <!--<li class="list-group-item"><a href="singlepost.html">2. </a></li>
                  <li class="list-group-item"><a href="singlepost.html">3. </a></li>
                  <li class="list-group-item"><a href="singlepost.html">4. </a></li>
