--- a/neuron2002.html
+++ b/neuron2002.html
@@ -174,7 +174,7 @@
                   <ul class="list-inline">
                     <li><a href="c9orf72.html">C9ORF72</a></li>
                     <li><a href="smallMolecules.html">Small Molecules</a></li>
-                    <li><a href="biomarker.html">Biomarkers</a></li>
+                    <li><a href="biomarkers.html">Biomarkers</a></li>
                     <!--<li><a href="#"></a></li>
                     <li><a href="#"></a></li>
                     <li><a href="#"></a></li>
