--- a/c9orf72.html
+++ b/c9orf72.html
@@ -69,7 +69,7 @@
                 <h1 class="page-header">
                     C9ORF72
                 </h1>
-                
+
                 <article>
                 <h2>
                 Unconventional Translation of C9orf72 GGGGCC expansion generates insoluble polypeptides
@@ -156,8 +156,9 @@
                    <h4>Latest Posts</h4>
                  </div>
                  <ul class="list-group">
-                   <li class="list-group-item"><a href="neuron2002.html">1. Unconventional Translation of C9orf72 GGGGCC expansion generates insoluble polypeptides </a></li>
-                   <li class="list-group-item"><a href="neuron1408.html">2. Identification of an ALS biomarker and a small molecule binding the GGGGCC repeat expansion</a></li>
+                   <li class="list-group-item"><a href="nature2108.html">1. Telomerase Expression in ALS </a></li>
+                   <li class="list-group-item"><a href="neuron2002.html">2. Unconventional Translation of C9orf72 GGGGCC expansion generates insoluble polypeptides </a></li>
+                   <li class="list-group-item"><a href="neuron1408.html">3. Identification of an ALS biomarker and a small molecule binding the GGGGCC repeat expansion</a></li>
                    <!--<li class="list-group-item"><a href="singlepost.html">2. </a></li>
                    <li class="list-group-item"><a href="singlepost.html">3. </a></li>
                    <li class="list-group-item"><a href="singlepost.html">4. </a></li>
@@ -206,6 +207,7 @@
                       <li><a href="c9orf72.html">C9ORF72</a></li>
                       <li><a href="smallMolecules.html">Small Molecules</a></li>
                       <li><a href="biomarkers.html">Biomarkers</a></li>
+                      <li><a href="telomerase.html">Telomerase</a></li>
                       <!--<li><a href="#"></a></li>
                       <li><a href="#"></a></li>
                       <li><a href="#"></a></li>
@@ -246,7 +248,7 @@
 
     <!-- Bootstrap Core JavaScript -->
     <script src="js/bootstrap.min.js"></script>
-    
+
 <script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
   (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
@@ -261,4 +263,3 @@
 </body>
 
 </html>
-
