--- a/nature2108.html
+++ b/nature2108.html
@@ -9,7 +9,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Identification of an ALS biomarker and a small molecule binding the GGGGCC repeat expansion
+    <title>Telomerase Expression in ALS
         </title>
 
     <!-- Bootstrap Core CSS -->
@@ -74,7 +74,7 @@
                 <!-- Blog Post -->
 
                 <!-- Title -->
-                <h2>Identification of an ALS biomarker and a small molecule binding the GGGGCC repeat expansion</h2>
+                <h2>Telomerase Expression in ALS</h2>
 
                 <!-- Author -->
                 <p class="lead">
@@ -84,31 +84,21 @@
                 <hr>
 
                 <!-- Date/Time -->
-                <p><span class="glyphicon glyphicon-time"></span> Posted on August 15, 2014 at 9:00 PM</p>
+                <p><span class="glyphicon glyphicon-time"></span> Posted on September 1, 2014 at 1:00 PM</p>
 
 
                 <!-- Post Content -->
-                <p class="lead">Researchers from The Scripps Research Institute and the Mayo Clinic identified a small molecule capable of stopping disease progression in a model of C9ORF72 linked FTD and ALS, which is the most common type of the diseases, caused by a GGGGCC repeat expansion in said gene.
-</p>
-                <p>The paper was published Thursday in Neuron. Apart from identifying a small molecule, they also identified a biomarker that might be useful to track disease progression and/or drug efficacy.
-</p>
-                <strong><p>Identification of small molecules binding the GGGGCC repeat expansion
-</p></strong>
-                <p>The first step in finding small molecules binding the repeat expansion is to gain insight about its structure. In order to do that, they performed optical melts (experiments that provide measurements of thermodynamic parameters of nucleic acids) in the presence of K+ and Na+ and found that it has both a hairpin and a G-quadruplex structure.
-</p>
-                <p>Earlier this year the group of developed a strategy to identify small molecules that bind RNA based on RNA small molecule interactions. They also identified a small molecule, 1a, that binds the CGG repeat found in FXTAS. Given the structural similarity between the GGGGCC repeat and the CGG repeat they hypothesized that 1a and similar compounds may bind the GGGGCC repeat. 3 compounds were identified.
-</p>
-                <p>Next, they checked if the compounds also bound the CCCCGG repeat in cells. Having stablished that they did, they checked for the effect on RAN translation (non-ATG translation, which is one of the primary pathogenic mechanisms associated with the repeat). Compounds 1a and 2 had a significant effect in RAN translation and decreased the percentage of cells containing nuclear aggregates.
-</p>
-                <p>The following step was to test it in a disease model. They derived neurons from fibroblasts with and without the C9ORF72 repeat expansion. Compound 1a significantly decreased the percentage of cells containing RNA aggregates. There was toxicity associated with compound 2 in the neurons, so its effect on neurons was not tested.
-</p>
-                <p>Summary: they identified a small molecule that can inhibit RNA aggregate formation and RAN translation, which are the 2 main pathogenic mechanism associated with C9ORF72 ALS, which is the most common type of ALS.
-</p>
-                <strong><p>Biomarker
-</p></strong>
-                <p>They developed an immunoassay to detect c9RAN proteins in cerebrospinal fluid. They found that the proteins are detectable. The biomarker has yet to be verified, but it could be a way to track disease progression and measure drug efficacy, which might significantly improve ALS clinical trials
-</p>
-                <p>Su, Z., Zhang, Y., Gendron, T. F., Bauer, P. O., Chew, J., Yang, W.-Y., … Disney, M. D. (2014). Discovery of a Biomarker and Lead Small Molecules to Target r(GGGGCC)-Associated Defects in c9FTD/ALS. Neuron, 1–8. doi:10.1016/j.neuron.2014.07.041</p>
+                <p class="lead">Telomerase has been linked to several neurological disorders. Human telomerase reverse transcriptase (hTERT) expression had never been characterized in ALS.
+                In a study plublished on August 21 on the Journal of Human Genetics, a team of researchers from Italy characterized telomerase in blood samples and spinal cord from 50 ALS patients and 50 controls. </p>
+                <p>Telomerase is an enzyme capable of reverse transcribing DNA. It is required for complete replication of telomeres. Telomerase expression is low in normal human cells, but upregulated in embryonic cells, adult male germ cells, stem cells, proliferating tissues and human malignancies.
+                Telomerase also has a regulatory role in gene expression. </p>
+                <p>Telomeres have largely been investigated for their roles in cancer, and its dysfunction has also shown to play a role in lung disease and neurological disfunction.</p>
+                <p>In a previous study in stem cells derived from ALS patients telomerase activity was 106 fold lower than glioblastoma tumor cells, but telmoerase activity was not compared to healthy controls. Interestingly, AGS-499 increases telomerase activity and expression in spinal cord and delayed the progression of ALS in SOD1 transgenic mice and increased survival by 60%.</p>
+                <p>In post mortem tissue from sALS patients hTERT expression was 96% lower than in controls. ALS leuhocytes also showed a 5-6x decrease in mTERt RNA transcript expression compared to controls. </p>
+                <p>p53 and p21 expression was overexpressed compared to controls, and correlated to level of hTERT mRNA in ALS</p>
+                <p>The telomere length was 15% lower in sALS patients than in controls, which is probably a consequence of inactive telomerase; as telomere length was correlated to mRNA expression of hTERT in leukocytes</p>
+                <p>Summary: telomerase activity was significantly decreased in sALS spinal cord and leukocytes. It has been suggested that the role of telomerase is to support genome instability and be neuroprotective, so the lack of hTERT expression could be required for neurodegeneration. Since AGS-499 increases lifespan in SOD1 mice, it can be concluded that the lack of telomerase contributes to neuronal death in sALS.</p>
+                <p>De Felice, B., Annunziata, A., Fiorentino, G., Manfellotto, F., D’Alessandro, R., Marino, R., … Biffali, E. (2014). Telomerase expression in amyotrophic lateral sclerosis (ALS) patients. Journal of Human Genetics, (July), 1–7. doi:10.1038/jhg.2014.72</p>
                 <hr>
 
                 <!-- Blog Comments -->
