--- a/index.html
+++ b/index.html
@@ -72,6 +72,21 @@
 
                 <article>
                 <h2>
+                Telomerase Expression in ALS
+
+                </h2>
+                <p class="lead"> by <a href="editorial.html">Maria Chavez</a>
+                </p>
+                <p><span class="glyphicon glyphicon-time"></span> Posted on September 1, 2014 at 1:00 PM</p>
+                <p>Telomerase has been linked to several neurological disorders. Human telomerase reverse transcriptase (hTERT) expression had never been characterized in ALS.
+                In a study plublished on August 21 on the Journal of Human Genetics, a team of researchers from Italy characterized telomerase in blood samples and spinal cord from 50 ALS patients and 50 controls.</p>
+                <a class="btn btn-danger" href="neuron2002.html" style="color: #FFFFFF">Read More <span class="glyphicon glyphicon-chevron-right"></span></a>
+                <hr>
+              </article>
+
+
+                <article>
+                <h2>
                 Unconventional Translation of C9orf72 GGGGCC expansion generates insoluble polypeptides
 
                 </h2>
@@ -213,6 +228,7 @@
                       <li><a href="c9orf72.html">C9ORF72</a></li>
                       <li><a href="smallMolecules.html">Small Molecules</a></li>
                       <li><a href="biomarkers.html">Biomarkers</a></li>
+                      <li><a href="telomerase.html">Telomerase</a></li>
                       <!--<li><a href="#"></a></li>
                       <li><a href="#"></a></li>
                       <li><a href="#"></a></li>
@@ -254,7 +270,7 @@
 
     <!-- Bootstrap Core JavaScript -->
     <script src="js/bootstrap.min.js"></script>
-    
+
 <script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
   (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
