--- a/neuron2002.html
+++ b/neuron2002.html
@@ -125,8 +125,9 @@
                  <h4>Latest Posts</h4>
                </div>
                <ul class="list-group">
-                 <li class="list-group-item"><a href="neuron2002.html">1. Unconventional Translation of C9orf72 GGGGCC expansion generates insoluble polypeptides </a></li>
-                 <li class="list-group-item"><a href="neuron1408.html">2. Identification of an ALS biomarker and a small molecule binding the GGGGCC repeat expansion</a></li>
+                 <li class="list-group-item"><a href="nature2108.html">1. Telomerase Expression in ALS </a></li>
+                 <li class="list-group-item"><a href="neuron2002.html">2. Unconventional Translation of C9orf72 GGGGCC expansion generates insoluble polypeptides </a></li>
+                 <li class="list-group-item"><a href="neuron1408.html">3. Identification of an ALS biomarker and a small molecule binding the GGGGCC repeat expansion</a></li>
                  <!--<li class="list-group-item"><a href="singlepost.html">2. </a></li>
                  <li class="list-group-item"><a href="singlepost.html">3. </a></li>
                  <li class="list-group-item"><a href="singlepost.html">4. </a></li>
@@ -175,6 +176,7 @@
                     <li><a href="c9orf72.html">C9ORF72</a></li>
                     <li><a href="smallMolecules.html">Small Molecules</a></li>
                     <li><a href="biomarkers.html">Biomarkers</a></li>
+                    <li><a href="telomerase.html">Telomerase</a></li>
                     <!--<li><a href="#"></a></li>
                     <li><a href="#"></a></li>
                     <li><a href="#"></a></li>
