--- a/newest.html
+++ b/newest.html
@@ -71,6 +71,21 @@
                 </h1>
 
                 <!-- First Blog Post -->
+
+                <article>
+                <h2>
+                Telomerase Expression in ALS
+
+                </h2>
+                <p class="lead"> by <a href="editorial.html">Maria Chavez</a>
+                </p>
+                <p><span class="glyphicon glyphicon-time"></span> Posted on September 1, 2014 at 1:00 PM</p>
+                <p>Telomerase has been linked to several neurological disorders. Human telomerase reverse transcriptase (hTERT) expression had never been characterized in ALS.
+                In a study plublished on August 21 on the Journal of Human Genetics, a team of researchers from Italy characterized telomerase in blood samples and spinal cord from 50 ALS patients and 50 controls.</p>
+                <a class="btn btn-danger" href="neuron2002.html" style="color: #FFFFFF">Read More <span class="glyphicon glyphicon-chevron-right"></span></a>
+                <hr>
+              </article>
+
                 <article>
                 <h2>
                 Identification of an ALS biomarker and a small molecule binding the GGGGCC repeat expansion
@@ -142,8 +157,9 @@
                    <h4>Latest Posts</h4>
                  </div>
                  <ul class="list-group">
-                   <li class="list-group-item"><a href="neuron2002.html">1. Unconventional Translation of C9orf72 GGGGCC expansion generates insoluble polypeptides </a></li>
-                   <li class="list-group-item"><a href="neuron1408.html">2. Identification of an ALS biomarker and a small molecule binding the GGGGCC repeat expansion</a></li>
+                   <li class="list-group-item"><a href="nature2108.html">1. Telomerase Expression in ALS </a></li>
+                   <li class="list-group-item"><a href="neuron2002.html">2. Unconventional Translation of C9orf72 GGGGCC expansion generates insoluble polypeptides </a></li>
+                   <li class="list-group-item"><a href="neuron1408.html">3. Identification of an ALS biomarker and a small molecule binding the GGGGCC repeat expansion</a></li>
                    <!--<li class="list-group-item"><a href="singlepost.html">2. </a></li>
                    <li class="list-group-item"><a href="singlepost.html">3. </a></li>
                    <li class="list-group-item"><a href="singlepost.html">4. </a></li>
@@ -192,6 +208,7 @@
                       <li><a href="c9orf72.html">C9ORF72</a></li>
                       <li><a href="smallMolecules.html">Small Molecules</a></li>
                       <li><a href="biomarkers.html">Biomarkers</a></li>
+                      <li><a href="telomerase.html">Telomerase</a></li>
                       <!--<li><a href="#"></a></li>
                       <li><a href="#"></a></li>
                       <li><a href="#"></a></li>
