--- a/smallMolecules.html
+++ b/smallMolecules.html
@@ -143,8 +143,9 @@
                    <h4>Latest Posts</h4>
                  </div>
                  <ul class="list-group">
-                   <li class="list-group-item"><a href="neuron2002.html">1. Unconventional Translation of C9orf72 GGGGCC expansion generates insoluble polypeptides </a></li>
-                   <li class="list-group-item"><a href="neuron1408.html">2. Identification of an ALS biomarker and a small molecule binding the GGGGCC repeat expansion</a></li>
+                   <li class="list-group-item"><a href="nature2108.html">1. Telomerase Expression in ALS </a></li>
+                   <li class="list-group-item"><a href="neuron2002.html">2. Unconventional Translation of C9orf72 GGGGCC expansion generates insoluble polypeptides </a></li>
+                   <li class="list-group-item"><a href="neuron1408.html">3. Identification of an ALS biomarker and a small molecule binding the GGGGCC repeat expansion</a></li>
                    <!--<li class="list-group-item"><a href="singlepost.html">2. </a></li>
                    <li class="list-group-item"><a href="singlepost.html">3. </a></li>
                    <li class="list-group-item"><a href="singlepost.html">4. </a></li>
@@ -193,6 +194,7 @@
                       <li><a href="c9orf72.html">C9ORF72</a></li>
                       <li><a href="smallMolecules.html">Small Molecules</a></li>
                       <li><a href="biomarkers.html">Biomarkers</a></li>
+                      <li><a href="telomerase.html">Telomerase</a></li>
                       <!--<li><a href="#"></a></li>
                       <li><a href="#"></a></li>
                       <li><a href="#"></a></li>
@@ -233,7 +235,7 @@
 
     <!-- Bootstrap Core JavaScript -->
     <script src="js/bootstrap.min.js"></script>
-    
+
 <script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
   (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
@@ -248,4 +250,3 @@
 </body>
 
 </html>
-
