--- a/index.html
+++ b/index.html
@@ -146,14 +146,14 @@
             <!-- Blog Sidebar Widgets Column -->
             <div class="col-md-4">
 
-               <!--<div class="well text-center">
+               <div class="well text-center">
                  <p class="lead">
                    Don't want to miss updates? Please click the below button!
                  </p>
-                 <button class="btn btn-danger btn-lg">Subscribe to my feed</button>
+                 <button class="btn btn-danger btn-lg" href="signup.html">Subscribe to my feed</button>
                </div>
 
-               <div class="well">
+               <!--<div class="well">
                    <h4>Blog Search</h4>
                    <div class="input-group">
                      <script>
