--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
                  <p class="lead">
                    Don't want to miss updates? Please click the below button!
                  </p>
-                 <button class="btn btn-danger btn-lg" href="signup.html">Subscribe to my feed</button>
+                 <a class="btn btn-danger btn-lg" href="http://eepurl.com/2fBqL">Subscribe to my feed</button>
                </div>
 
                <!--<div class="well">
