--- a/major.html
+++ b/major.html
@@ -150,6 +150,13 @@
             <!-- Blog Sidebar Widgets Column -->
             <div class="col-md-4">
 
+              <div class="well text-center">
+                <p class="lead">
+                  Don't want to miss updates? Please click the below button!
+                </p>
+                <a class="btn btn-danger btn-lg" href="http://eepurl.com/2fBqL">Subscribe to my feed</a>
+              </div>
+
                <div class="panel panel-default">
                  <div class="panel-heading">
                    <h4>Latest Posts</h4>
