Changed link color in subscribe button

--- a/nature2108.html
+++ b/nature2108.html
@@ -127,7 +127,7 @@
                 <p class="lead">
                   Don't want to miss updates? Please click the below button!
                 </p>
-                <a class="btn btn-danger btn-lg" href="http://eepurl.com/2fBqL">Subscribe to my feed</a>
+                <a class="btn btn-danger btn-lg" href="http://eepurl.com/2fBqL" style="color: #FFFFFF">Subscribe to my feed</a>
               </div>
 
              <div class="panel panel-default">
